<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="christopherfontana.ratethatrecord.MainActivity">

    <Button
        android:text="@string/btnBuble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:id="@+id/btnBuble" />

    <Button
        android:text="@string/btnTrouble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/btnTrouble"
        android:layout_below="@+id/btnBuble"
        android:layout_alignRight="@+id/btnBuble"
        android:layout_alignEnd="@+id/btnBuble"
        android:layout_alignLeft="@+id/btnBuble"
        android:layout_alignStart="@+id/btnBuble" />

    <Button
        android:text="@string/btnWonder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/btnWonder"
        android:layout_below="@+id/btnTrouble"
        android:layout_alignRight="@+id/btnTrouble"
        android:layout_alignEnd="@+id/btnTrouble"
        android:layout_alignLeft="@+id/btnTrouble"
        android:layout_alignStart="@+id/btnTrouble" />

    <Button
        android:text="@string/btnRankings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRankings"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/michaelbubleresized"
        android:id="@+id/mainImage"
        android:layout_below="@+id/btnWonder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/buble" />
</RelativeLayout>
